<resources>
    <string name="app_name">AReview</string>

    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_account">Account</string>
    <string name="title_places">Places</string>
    <string name="title_review">Review</string>

    <string name="title_plac">Place</string>
    <string name="title_dish">Dish</string>
    <string name="title_name">Dish name</string>
    <string name="title_photo">Photo</string>
    <string name="title_continue">Continue</string>
    <string name="title_location">Location</string>

    <string name="title_taste">Taste</string>
    <string name="title_presentation">Presentation</string>
    <string name="title_service">Service</string>
    <string name="title_ambient">Ambient</string>
    <string name="title_temperature">Temperature</string>
    <string name="title_categories">Pick one or more categories</string>
    <string name="title_submit">Submit</string>

    <string name="title_welcome">Welcome</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="title_login">Login</string>
    <string name="title_createAccount">Create an account</string>

    <string name="title_joinUs">Join us</string>
    <string name="title_confirmPassword">Confirm password</string>
    <string name="title_register">Register</string>
    <string name="title_already">Already have an account</string>

    <string name="title_editProfile">Edit profile</string>
    <string name="title_signOut">Sign out</string>


    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_restaurant">Restaurant</string>
    <string name="title_activity_places">Places</string>


    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="ConDesImgRes">Imagen del Restaurante</string>

    <string name="navigation_review">Review</string>
    <string name="minimum_password">Password to short</string>
    <string name="auth_failed">Auth failed</string>

</resources>
