<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_places"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/title_places" />

    <item
        android:id="@+id/navigation_review"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:title="@string/title_review" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_account" />



</menu>
