<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.g.myfirstapp.Fragments.CommentFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RatingBar
            android:id="@+id/ratingBar_starts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_comment"
            android:layout_centerHorizontal="true"
            android:rating="5"
            android:stepSize="1" />

        <TextView
            android:id="@+id/tv_title_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Great"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_msg_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ratingBar_starts"
            android:layout_centerHorizontal="true"
            android:text="I really enjoyed"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_msg_comment"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:text="@string/title_categories" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="57dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/title_submit"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:id="@+id/constraintLayout">

            <CheckBox
                android:id="@+id/cb_taste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:text="@string/title_taste"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/cb_presentation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/title_presentation"
                app:layout_constraintStart_toEndOf="@+id/cb_taste"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/cb_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/title_service"
                app:layout_constraintStart_toEndOf="@+id/cb_presentation"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/cb_ambient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="108dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_ambient"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cb_taste" />

            <CheckBox
                android:id="@+id/cb_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_temperature"
                app:layout_constraintStart_toEndOf="@+id/cb_ambient"
                app:layout_constraintTop_toBottomOf="@+id/cb_presentation" />

        </android.support.constraint.ConstraintLayout>

        <EditText
            android:id="@+id/et_commentUser"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_below="@+id/constraintLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:background="#dae1e9"
            android:ems="10"
            android:gravity="top"
            android:hint="Optional comment "
            android:inputType="textMultiLine"
            android:lineSpacingExtra="8sp"
            android:maxLength ="220"
            android:maxLines ="7"
            android:scrollHorizontally="false"
            android:singleLine="false"
            android:textAlignment="center"/>

    </RelativeLayout>
</FrameLayout>
