<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@android:color/white"
    tools:context="com.example.g.myfirstapp.Fragments.ReviewFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:id="@+id/ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="18dp"
            android:text="@string/title_plac"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/et_dishName"
            app:layout_constraintRight_toLeftOf="@+id/et_dishName"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:backgroundTint="#0277bd"
            android:drawableLeft="@drawable/ic_location"
            android:text="@string/title_location"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_location" />

        <TextView
            android:id="@+id/tv_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text="Choose a place"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_place" />

        <TextView
            android:id="@+id/tv_dish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/title_dish"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_place"
            app:layout_constraintStart_toStartOf="@+id/tv_place"
            app:layout_constraintTop_toBottomOf="@+id/btn_location" />


        <EditText
            android:id="@+id/et_dishName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/title_name"
            android:inputType="textPersonName"
            android:maxLength="50"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dish" />

        <Button
            android:id="@+id/btn_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#0277bd"
            android:drawableLeft="@drawable/ic_camera"
            android:text="@string/title_photo"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_photoDish" />

        <ImageView
            android:id="@+id/iv_photoDish"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="12dp"
            android:src="@mipmap/ic_dish"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_dishName" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/et_dishName"
            app:layout_constraintEnd_toStartOf="@+id/et_dishName"
            app:layout_constraintRight_toLeftOf="@+id/et_dishName"
            app:layout_constraintTop_toBottomOf="@+id/tv_dish"
            app:srcCompat="@drawable/ic_restaurant" />

        <Button
            android:id="@+id/btn_continue"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="156dp"
            android:layout_marginTop="29dp"
            android:color="@android:color/transparent"
            android:text="@string/title_continue"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_photo" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
