<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.g.myfirstapp.AccountActivity"
    android:background="@drawable/gradient_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="188dp"
            android:layout_height="175dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/image_logo" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView4"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="116dp"
            android:layout_marginTop="20dp"
            android:text="@string/title_welcome"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText_password"
            android:layout_alignStart="@+id/editText_password"
            android:layout_below="@+id/tv_welcome"
            android:layout_marginTop="26dp"
            android:ems="10"
            android:hint="@string/title_email"
            android:maxLength="100"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btn_login"
            android:layout_alignStart="@+id/btn_login"
            android:layout_below="@+id/editText_email"
            android:ems="10"
            android:hint="@string/title_password"
            android:inputType="textPassword"
            android:maxLength="100"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_email" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="49dp"
            android:layout_below="@+id/editText_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="13dp"
            android:backgroundTint="#88ffff"
            android:onClick="login"
            android:text="@string/title_login"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_password" />

        <Button
            android:id="@+id/btn_createAccount"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="108dp"
            android:onClick="create"
            android:text="@string/title_createAccount"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
